IDE: undo/redo, bracket support, context autocomplete, keybinds modal, tab bar removal
- TextFieldElement: undo/redo stack (Ctrl+Z/Y), auto-close/skip/wrap/smart-backspace/smart-enter for ()[]{}
- ClickScriptAutocomplete: context-aware suggestions for if/if_not inline commands, deduplicate arg-pool logic into firstArgPool(), Math.clamp() for popup x, consolidated field declarations
- ClickScriptIDE: remove EditorTabBar, centered keybinds modal (Escape/outside-click/× to close), fix Ctrl+Z clearing file on load, remove Ctrl+W